add id value and for tag on clinic panel to properties and services

--- a/src/views/clinic-panel/pages/panel/properties-and-services.ejs
+++ b/src/views/clinic-panel/pages/panel/properties-and-services.ejs
@@ -84,66 +84,66 @@
                   <!-- ! '_' li ifade input alanındaki id ve name alanlarına eklenecek(inputlara name alanı eklenecek) -->
                   <!-- ! '_' li ifade label lardaki for lara eklenecek.. -->
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="park_services" />
-                    <label class="form-check-label" for="park_services"> Otopark Hizmeti </label>
+                    <input class="form-check-input" type="checkbox" value="Otopark Hizmeti" id="Otopark_Hizmeti" />
+                    <label class="form-check-label" for="Otopark_Hizmeti"> Otopark Hizmeti </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="ambulance_services" />
-                    <label class="form-check-label" for="ambulance_services"> Ambulans Hizmeti </label>
+                    <input class="form-check-input" type="checkbox" value="Ambulans Hizmeti" id="Ambulans_Hizmeti" />
+                    <label class="form-check-label" for="Ambulans_Hizmeti"> Ambulans Hizmeti </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="services" />
-                    <label class="form-check-label" for="services"> 7/24 Ulaşılabilirlik </label>
+                    <input class="form-check-input" type="checkbox" value="7/24 Ulaşılabilirlik" id="7/24_Ulaşılabilirlik" />
+                    <label class="form-check-label" for="7/24_Ulaşılabilirlik"> 7/24 Ulaşılabilirlik </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="room_services" />
-                    <label class="form-check-label" for="room_services"> İzole Oda </label>
+                    <input class="form-check-input" type="checkbox" value="Izole Oda" id="Izole_Oda" />
+                    <label class="form-check-label" for="Izole_Oda"> İzole Oda </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="otomatic_bad" />
-                    <label class="form-check-label" for="otomatic_bad"> El Kumandalı Otomatik Yatak </label>
+                    <input class="form-check-input" type="checkbox" value="El Kumandalı Otomatik Yatak" id="El_Kumandalı_Otomatik_Yatak" />
+                    <label class="form-check-label" for="El_Kumandalı_Otomatik_Yatak"> El Kumandalı Otomatik Yatak </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="patient_services" />
+                    <input class="form-check-input" type="checkbox" value="Sedyeli Hasta Asansörü" id="Sedyeli_Hasta_Asansörü" />
                     <label class="form-check-label" for="patient_services"> Sedyeli Hasta Asansörü </label>
                   </div>
                 </div>
                 <div class="form-box mt-4">
                   <div class="title">Merkez Binası Tipi</div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="private_center" checked />
-                    <label class="form-check-label selected" for="private_center"> Müstakil Binalı Merkez </label>
+                    <input class="form-check-input" type="checkbox" value="Müstakil Binalı Merkez" id="Müstakil_Binalı_Merkez" checked />
+                    <label class="form-check-label selected" for="Müstakil_Binalı_Merkez"> Müstakil Binalı Merkez </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="notprivate_center" />
-                    <label class="form-check-label" for="notprivate_center"> Müstakil Binada Olmayan Merkez </label>
+                    <input class="form-check-input" type="checkbox" value="Müstakil Binada Olmayan Merkez" id="Müstakil_Binada_Olmayan_Merkez" />
+                    <label class="form-check-label" for="Müstakil_Binada_Olmayan_Merkez"> Müstakil Binada Olmayan Merkez </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="hospital_center" />
-                    <label class="form-check-label" for="hospital_center"> Hastane İçi Merkez </label>
+                    <input class="form-check-input" type="checkbox" value="Hastane Ici Merkez" id="Hastane_Ici_Merkez" />
+                    <label class="form-check-label" for="Hastane_Ici_Merkez"> Hastane İçi Merkez </label>
                   </div>
                 </div>
                 <div class="form-box">
                   <div class="title mt-4">Konuşulan Diller (Personel)</div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="language_tr" checked />
-                    <label class="form-check-label selected" for="language_tr"> Türkçe </label>
+                    <input class="form-check-input" type="checkbox" value="Turkce" id="Turkce" checked />
+                    <label class="form-check-label selected" for="Turkce"> Türkçe </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="language_en" />
-                    <label class="form-check-label" for="language_en"> İngilizce </label>
+                    <input class="form-check-input" type="checkbox" value="Ingilizce" id="Ingilizce" />
+                    <label class="form-check-label" for="Ingilizce"> İngilizce </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="language_rs" />
-                    <label class="form-check-label" for="language_rs"> Rusça </label>
+                    <input class="form-check-input" type="checkbox" value="Rusca" id="Rusca" />
+                    <label class="form-check-label" for="Rusca"> Rusça </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="language_ar" />
-                    <label class="form-check-label" for="language_ar"> Arapça </label>
+                    <input class="form-check-input" type="checkbox" value="Arapca" id="Arapca" />
+                    <label class="form-check-label" for="Arapca"> Arapça </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="language_sp" />
-                    <label class="form-check-label" for="language_sp"> İspanyolca </label>
+                    <input class="form-check-input" type="checkbox" value="Ispanyolca" id="Ispanyolca" />
+                    <label class="form-check-label" for="Ispanyolca"> İspanyolca </label>
                   </div>
                   <!-- <div class="tm-margin-t-1">
                     <a href="#">Farklı bir dil eklemek için tıklayın</a>
@@ -154,61 +154,61 @@
                 <div class="form-box">
                   <div class="title mt-4">Diyaliz Merkezleri</div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="private_private" checked />
-                    <label class="form-check-label selected" for="private_private"> Özel Diyaliz Merkezi </label>
+                    <input class="form-check-input" type="checkbox" value="Ozel Diyaliz Merkezi" id="Ozel_Diyaliz_Merkezi" checked />
+                    <label class="form-check-label selected" for="Ozel_Diyaliz_Merkezi"> Özel Diyaliz Merkezi </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="private_public" />
-                    <label class="form-check-label" for="private_public"> Kamu Diyaliz Merkezi </label>
+                    <input class="form-check-input" type="checkbox" value="Kamu Diyaliz Merkezi" id="Kamu_Diyaliz_Merkezi" />
+                    <label class="form-check-label" for="Kamu_Diyaliz_Merkezi"> Kamu Diyaliz Merkezi </label>
                   </div> 
                 </div>
                 <div class="form-box">
                   <div class="title mt-4">Sigorta Durumu</div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="sgk_agreement" checked />
-                    <label class="form-check-label selected" for="sgk_agreement"> SSK Anlaşmalı </label>
+                    <input class="form-check-input" type="checkbox" value="SSK Anlaşmalı" id="SSK_Anlasmalı" checked />
+                    <label class="form-check-label selected" for="SSK_Anlasmalı"> SSK Anlaşmalı </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="bank_agreement" />
-                    <label class="form-check-label" for="bank_agreement"> Banka Anlaşmalı </label>
+                    <input class="form-check-input" type="checkbox" value="Banka Anlaşmalı" id="Banka_Anlasmalı" />
+                    <label class="form-check-label" for="Banka_Anlasmalı"> Banka Anlaşmalı </label>
                   </div>
                 </div>
                 <div class="form-box">
                   <div class="title mt-4">Personel Durumu</div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="dietitian" checked />
-                    <label class="form-check-label selected" for="dietitian"> Diyetisyen </label>
+                    <input class="form-check-input" type="checkbox" value="Diyetisyen" id="Diyetisyen" checked />
+                    <label class="form-check-label selected" for="Diyetisyen"> Diyetisyen </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="nefrlog" />
-                    <label class="form-check-label" for="nefrlog"> Nefrlolog </label>
+                    <input class="form-check-input" type="checkbox" value="Nefrlolog" id="Nefrlolog" />
+                    <label class="form-check-label" for="Nefrlolog"> Nefrlolog </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="prof" />
-                    <label class="form-check-label" for="prof"> Profesörlü </label>
+                    <input class="form-check-input" type="checkbox" value="Profesörlü" id="Profesörlü" />
+                    <label class="form-check-label" for="Profesörlü"> Profesörlü </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="doctor" />
-                    <label class="form-check-label" for="doctor"> Uzman Hekimli </label>
+                    <input class="form-check-input" type="checkbox" value="Uzman Hekimli" id="Uzman_Hekimli" />
+                    <label class="form-check-label" for="Uzman_Hekimli"> Uzman Hekimli </label>
                   </div>
                 </div>
                 
                 <div class="form-box">
                   <div class="title mt-4">Tercüman Hizmeti</div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="radio" value="" id="paid" checked />
-                    <label class="form-check-label selected" for="paid"> Ücretli </label>
+                    <input class="form-check-input" type="radio" value="Ucretli" id="Ucretli" checked />
+                    <label class="form-check-label selected" for="Ucretli"> Ücretli </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="radio" value="" id="free" />
-                    <label class="form-check-label" for="free"> Ücretsiz </label>
+                    <input class="form-check-input" type="radio" value="Ucretsiz" id="Ucretsiz" />
+                    <label class="form-check-label" for="Ucretsiz"> Ücretsiz </label>
                   </div>
                 </div>
                 <div class="form-box">
                   <div class="title mt-4">Ek Hizmetler</div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="free_airport" checked />
-                    <label class="form-check-label selected" for="free_airport"> Ücretsiz Havaalanı Transferi </label>
+                    <input class="form-check-input" type="checkbox" value="Ucretsiz Havaalanı Transferi" id="Ucretsiz Havaalanı Transferi" checked />
+                    <label class="form-check-label selected" for="Ucretsiz Havaalanı Transferi"> Ücretsiz Havaalanı Transferi </label>
                   </div>
                   <div class="form-group">
                     <label for="others" class="custom">Diğer (Açıklayınız)</label>
