--- a/src/views/clinic-panel/layouts/panel.ejs
+++ b/src/views/clinic-panel/layouts/panel.ejs
@@ -61,6 +61,7 @@
   <!-- <script src="../user/js/cleander.js"></script> -->
   <!-- Bootstrap 5 -->
   <script src="../user/js/location.js"></script>
+  <script src="../user/js/upload-image-remove.js"></script>
   <!-- load JS files -->
   <script src="../user/js/jquery-1.11.3.min.js"></script>
   <script src="../user/js/popper.min.js"></script>
