add motto sentence

--- a/src/views/user/pages/index.ejs
+++ b/src/views/user/pages/index.ejs
@@ -308,9 +308,9 @@
           <img src="../user/img/icons/quote-top.png" alt="Quote Top" class="quote-icon-top" />
           <div class="inner-content">
             <div class="tm-section-title" key="thereadTitle">Önemli olan sizsiniz ve biz sizler için buradayız.</div>
-            <div class="text" key="thereadText">Güvenilir uzman kadromuz ve altyapımız ile diyaliz merkezi ve tatil diyalizi lokasyon aramalarınızda hizmetinizdeyiz.</div>
+            <div class="text mb-5" key="thereadText">Güvenilir uzman kadromuz ve altyapımızla diyaliz merkezi ve tatil diyalizi lokasyonu aramalarınızda hizmetinizdeyiz.</div>
           </div>
-          <img src="../user/img/icons/quote-bottom.png" alt="Quote Bottom" class="quote-icon-bottom" />
+          <img src="../user/img/icons/quote-bottom.png" alt="Quote Bottom" class="quote-icon-bottom mb-5" />
         </div>
         <div class="profiles">
           <div class="customer-count mt-3" key="thereadCustomer">167 Mutlu Hasta</div>
