--- a/src/views/clinic-panel/partials/footer.ejs
+++ b/src/views/clinic-panel/partials/footer.ejs
@@ -2,12 +2,12 @@
 <footer>
   <div class="container footer">
     <div class="row pt-5">
-      <div class="col-lg-3 mb-5">
+      <div class="col-lg-4 mb-5">
         <h5>
           <a class="f-el tm-margin-b-1 mr-auto logo logo-footer tm-color-white" href="../index.html">Dialysing<span>.com</span></a>
         </h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2">Diyalize girenlerin diledikleri gibi ve güvenle tatil yapabilecekleri, dünyayı özgürce dolaşabilecekleri bir gelecek inşa etmek için çalışıyoruz</li>
+          <li class="nav-item mb-2">’Diyalize girenlerin diledikleri an ve güvenle tatil yapabilecekleri, dünyayı özgürce dolaşabilecekleri bir gelecek inşa etmek için çalışıyoruz. </li>
           <li class="nav-item social mb-2">
             <img src="../user/img/socials/facebook.png" alt="" />
             <img src="../user/img/socials/instagram.png" alt="" />
@@ -45,7 +45,7 @@
         </ul>
       </div>
 
-      <div class="col-lg-3 mb-3">
+      <!-- <div class="col-lg-3 mb-3">
         <form>
           <h5>Abonelikler</h5>
           <p class="text-white">Son gelişmelerden haberdar olmak için abone olun.</p>
@@ -54,7 +54,7 @@
             <img src="../user/img/icons/arrow.png" class="mt-0" alt="Icon Arrow" />
           </div>
         </form>
-      </div>
+      </div> -->
     </div>
     <div class="d-flex justify-content-between mt-3 py-4 border-top">
       <p class="text-secondary">&copy; 2021 Dialysing.com. Her hakkı saklıdır.</p>
