--- a/src/views/user/partials/index-navbar.ejs
+++ b/src/views/user/partials/index-navbar.ejs
@@ -157,7 +157,7 @@
       <div class="container ie-h-align-center-fix">
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ml-auto mr-auto ie-container-width-fix text-center tm-header-content mt-5">
-            <div key="centerFindSearch" class="tm-header-title pr-5 px-5">Aradığınız Diyaliz Merkezinizi Bulun</div>
+            <div key="centerFindSearch" class="tm-header-title pr-5 px-5">Diyaliz Merkezinizi Bulun</div>
             <div key="centerEasy" class="tm-header-text mt-2 pr-5 px-5">Diyaliz merkezi bulmanın en kolay yolu</div>
             <form action="/clinic/clinic-list" method="GET" class="tm-search-form tm-section-pad-2">
               <div class="form-row tm-search-form-row">
