change birth date

--- a/src/views/user/pages/register.ejs
+++ b/src/views/user/pages/register.ejs
@@ -48,6 +48,10 @@
                 <label for="birthdate">Doğum Tarihiniz</label>
                 <input type="date" class="form-control" id="birthDate" name="birthDate" value="<%- typeof birthDate != 'undefined' ? birthDate : '' %>" placeholder="Doğum Tarihiniz" />
               </div>
+              <!-- <div class="form-group">
+                <label for="birthdate">Doğum Tarihiniz</label>
+                <input type="date" class="form-control" id="birthDate" name="birthDate" value="<%- typeof birthDate != 'undefined' ? birthDate : '' %>" placeholder="Doğum Tarihiniz" />
+              </div> -->
               <div class="form-group">
                 <label for="email">Email Adresiniz</label>
                 <input type="email" class="form-control" id="email" name="email" value="<%- typeof email != 'undefined' ? email : '' %>" placeholder="Email Adresiniz" />
